web/themes/custom/union_marketing/scss/global/_union-variables.scss
/**
 *
 * This file is for setting and overriding union css variables
 *
 */

.cu-topic-list,
.course-certificates {
  .cu-feature-list__name {
    --cu-current-heading-size: var(--cu-ms2);
  }
}

.cu-card--padded {
  --cu-card-background: #efefef;
  --cu-grid-row-gap: .5em;
  color: var(--cu-color-text);
}

.union-marketing-card--dark {
  --cu-card-background: #333;
  --cu-color-text: #efefef;

  a {
    --cu-current-link-color: var(--cu-color-text);
  }
}

.collection-listing.cu-grid,
.cu-list--grid,
.cu-list--grid-compact {
  --cu-grid-row-gap: var(--cu-vr2);
  --cu-grid-column-gap: var(--cu-ps0);

  @include breakpoint(md) {
    --cu-grid-row-gap: var(--cu-vr3);
    --cu-grid-column-gap: var(--cu-ps1);
  }
}

.cu-grid.cu-grid--4col {
  --cu-grid-column-gap: var(--cu-vr0);
}

.cu-list--grid-compact {
  --cu-component-margin-top: var(--cu-vr2);
}

@include breakpoint(md) {
  .cu-grid--courses {
    --cu-grid-row-gap: var(--cu-ps2);
    --cu-grid-column-gap: var(--cu-ps2);
  }
}

.node--course.node--view-mode-teaser h3.cu-heading {
  --cu-current-heading-size: var(--cu-text-xxxl);
}

.cu-heading.cu-heading--label {
  --cu-current-heading-size: var(--cu-ms1);
  --cu-current-font-weight: 400;
}

